--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@ a {
            <a href="https://www.youtube.com/watch?v=0xWhLwe2LqM&width=100%&height=100%" rel="prettyPhoto">
           <i class="fa fa-play"></i>
           </a>
-          <h6><a href="invite.html" target="_blank" class="invite-button">Get An Invite</a></h6>
+          <!--<h6><a href="invite.html" target="_blank" class="invite-button">Get An Invite</a></h6> -->
         </div>
       </section>
         <section class="page2">
