--- a/home-demo.html
+++ b/home-demo.html
@@ -57,20 +57,20 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                       </button>
-                      <a class="navbar-brand page-scroll" href="index.html">Qiku</a>
+                      <a class="navbar-brand page-scroll" href="/">Qiku</a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a class="page-scroll" href="/qikuterra.html">Qiku Terra</a></li>
+                            <li><a class="page-scroll" href="/in/qikuterra.html">Qiku Terra</a></li>
                             <li><a class="page-scroll" href="#about-section">All Products</a>
                             	<!--<ul>
                             		<li><a href="#">Q Terra</a></li>
                             		<li><a href="#">Accessorie</a></li>
                             	</ul> -->
                             </li>
-                            <li><a class="page-scroll" href="/360os.html">360OS</a></li>
+                            <li><a class="page-scroll" href="/in/360os.html">360OS</a></li>
                             <li><a class="page-scroll" href="https://forums.qiku.com" target="_blank">Community</a>
                             	<ul>
                             		<li><a href="http://blog.qiku.com" target="_blank">&nbsp;&nbsp;Blog&nbsp;&nbsp;</a></li>
@@ -113,7 +113,7 @@
                    <h1 class="heading">Q Terra</h1>
 								<p class="subheading">The Ultimate Flagship</p>
 								 <div class="extra-space-l"></div>
-								<a class="btn btn-blank f_27" href="/qikuterra.html
+								<a class="btn btn-blank f_27" href="/in/qikuterra.html
 " role="button" >Learn more &gt;&gt;</a>
                                 <div class="extra-space-l bottom-70"></div>
 								<img src="img/Phone.png" class="img-responsive bottom-50" style="margin-left:auto; margin-right:auto;display:block;">
@@ -128,7 +128,7 @@
                    	 <h1 class="heading-white">Q Terra</h1>
 								<p class="subheading-white">The Ultimate Flagship</p>
 								 <div class="extra-space-l"></div>
-								<a class="btn btn-blank f_27" href="/qikuterra.html
+								<a class="btn btn-blank f_27" href="/in/qikuterra.html
 " role="button" >Learn more &gt;&gt;</a>
 <div class="extra-space-l bottom-70"></div>
 
