--- a/qikuterra.html
+++ b/qikuterra.html
@@ -32,14 +32,14 @@
                 </div>
                 <div class="fl ml30">
                     <ul class="hd-nav ">
-                        <li><a href="../en/qikuterra.html">Summary</a></li>
-                        <li><a href="../en/qikuterra/camera.html">Camera</a></li>
-                        <li><a href="../en/qikuterra/design.html">Craft & Design</a></li>
-                        <li><a href="../en/qikuterra/performance.html">Performance</a></li>
-                        <li><a href="../en/360os.html" target="_blank">360OS</a></li>
-                        <li><a href="../en/qikuterra/parameter.html">Parameters</a></li>
-                        <li><a href="../en/qikuterra/photo.html">Gallery</a></li>
-                        <li class="rb ml300 mt10 ri1"><a href="/en/" target="_blank">HOME</a></li>
+                        <li><a href="../in/qikuterra.html">Summary</a></li>
+                        <li><a href="../in/qikuterra/camera.html">Camera</a></li>
+                        <li><a href="../in/qikuterra/design.html">Craft & Design</a></li>
+                        <li><a href="../in/qikuterra/performance.html">Performance</a></li>
+                        <li><a href="../in/360os.html" target="_blank">360OS</a></li>
+                        <li><a href="../in/qikuterra/parameter.html">Parameters</a></li>
+                        <li><a href="../in/qikuterra/photo.html">Gallery</a></li>
+                        <li class="rb ml300 mt10 ri1"><a href="/in/" target="_blank">HOME</a></li>
                     </ul>
 
                 </div>
