--- a/qikuterra/performance.html
+++ b/qikuterra/performance.html
@@ -30,13 +30,13 @@
         <div class="fl ml30">
         	<ul class="hd-nav ">
             	<li><a href="../qikuterra.html">Summary</a></li>
-                <li><a href="camera.html">Camera</a></li>
-                <li><a href="design.html">Craft & Design</a></li>
-                <li><a href="performance.html">Performance</a></li>
+                <li><a href="/in/camera.html">Camera</a></li>
+                <li><a href="/in/design.html">Craft & Design</a></li>
+                <li><a href="/in/performance.html">Performance</a></li>
                 <li><a href="../360os.html" target="_blank">360OS</a></li>
-                <li><a href="parameter.html">Parameters</a></li>
-                <li><a href="photo.html">Gallery</a></li>
-                <li class="rb ml300 mt10 ri1"><a href="/en/index.html" target="_blank">home</a></li>
+                <li><a href="/in/parameter.html">Parameters</a></li>
+                <li><a href="/in/photo.html">Gallery</a></li>
+                <li class="rb ml300 mt10 ri1"><a href="/in/index.html" target="_blank">home</a></li>
                 
                 <!-- <li class="rb ml5 mt10 ri3"><a href="/zt/youth/default.html" target="_blank">Learn more about Qiku Luna</a></li> -->
             </ul>
