linked website main

--- a/360os.html
+++ b/360os.html
@@ -28,8 +28,8 @@
                     <li><a href="safe.html">安全</a></li>
                     <li><a href="brisk.html">轻快</a></li>
                     <li><a href="power.html">省电</a></li> -->
-                    <li><a href="../en/qikuterra.html" target="_blank">HOME</a></li>
-                    <li class="current"><a href="360os.html" class="current">360 0S</a></li>
+                    <li><a href="../en/qikuterra.html" target="_blank">&nbsp;</a></li>
+                    <li class="current"><a href="360os.html" class="current">&nbsp;</a></li>
                 </ul>
             </div>
         </div>
@@ -41,7 +41,7 @@
                         <!--<img src="images/360os_title.png">-->
                     </div>
                     <h2>Safe   Smooth   Super Power-saving</h2>
-                    <p class="desc">Strengthening functionality with end-to-end safety represents a milestone for QiKU's system-level approach. Embedded with active safety technology, the QiKU phone delivers perfect anti-fraud, anti-harassment, property protection, and privacy protection functions. Thanks to more than 2,500 experts involved in the safety engineering of the Qihoo 360, users can enjoy the convenience of high-tech features without any of the risks.</p>
+                    <p class="desc">Strengthening functionality with end-to-end safety represents a milestone for QiKU's system-level approach. Thanks to more than 2,500 experts involved in the safety engineering of the Qihoo 360, users can enjoy the convenience of high-tech features without any of the risks.</p>
                      <p><a class="os-view-link J_canZoomImg" href="javascript:;">Watch 360OS General Video</a></p>
                 </div>
             </div>
@@ -55,7 +55,7 @@
             <div class="section part_os over_part_3">
                 <div class="container">
                     <h2>System level active defense</h2>
-                    <p class="desc">360 OS fully integrates security center services for more stable and reliable running at the system level. The newly developed system-level active defense technology can provide a full range of security solutions including property isolation system, privacy space, anti-fraud and anti-harassment to ensure the system operates securely.</p>
+                    <p class="desc">360 OS fully integrates security center services for more stable and reliable running at the system level. The newly developed system-level active defense technology can provide a full range of security solutions including privacy space,anti-harassment and more functions to ensure the system operates securely.</p>
                     <!-- <p><a class="os-view-link" href="safe.html">Watch 360OS Safety</a></p> -->
                     <div class="safe">
                         <figure class="safe_img anit"></figure>
@@ -75,7 +75,6 @@
                 <div class="container">
                     <h2>Keep Calm and Long-lasting</h2>
                     <p class="desc">The APS decision-making system, freezer, and anti-self startup technologies of the 360 OS prevent power usage by apps and increase battery capacity by 30%. The new heat source tracking technology fast locates any app that causes the phone to overheat to cool the phone down. PowerXtend power saving technology substantially lowers battery consumption without affecting user experience. In addition, the black&white power saving mode can help you optimally use the remaining battery life.</p>
-                    <p><a class="os-view-link" href="power.html">Watch 360OS Super Power-saving</a></p>
                 </div>
             </div>
         </div>
