--- a/qikuterra.html
+++ b/qikuterra.html
@@ -28,18 +28,18 @@
         <div id="header" class="header">
             <div class="container">
                 <div class="hd-title">
-                    <h2 class="name">QiKU Terra</h2>
+                    <h2 class="name">QiKU Q Terra</h2>
                 </div>
                 <div class="fl ml30">
                     <ul class="hd-nav ">
-                        <li><a href="../in/qikuterra.html">Summary</a></li>
-                        <li><a href="../in/qikuterra/camera.html">Camera</a></li>
-                        <li><a href="../in/qikuterra/design.html">Craft & Design</a></li>
-                        <li><a href="../in/qikuterra/performance.html">Performance</a></li>
-                        <li><a href="../in/360os.html" target="_blank">360OS</a></li>
-                        <li><a href="../in/qikuterra/parameter.html">Parameters</a></li>
-                        <li><a href="../in/qikuterra/photo.html">Gallery</a></li>
-                        <li class="rb ml300 mt10 ri1"><a href="/in/" target="_blank">HOME</a></li>
+                        <li><a href="qikuterra.html">Summary</a></li>
+                        <li><a href="qikuterra/camera.html">Camera</a></li>
+                        <li><a href="qikuterra/design.html">Craft & Design</a></li>
+                        <li><a href="qikuterra/performance.html">Performance</a></li>
+                        <li><a href="360os.html" target="_blank">360OS</a></li>
+                        <li><a href="qikuterra/parameter.html">Parameters</a></li>
+                        <li><a href="qikuterra/photo.html">Gallery</a></li>
+                        <li class="rb ml300 mt10 ri1"><a href="/in" >HOME</a></li>
                     </ul>
 
                 </div>
@@ -50,7 +50,7 @@
             <div class="container">
                 <div class="content item1" data-countdown="true">
                     <div class="titlename">
-                        <h2>QiKU Terra</h2>
+                        <h2>QiKU Q Terra</h2>
                         <h3>Born to Be A Game Changer<br/><i>#TheUltimateFlagship</i></h3>
                         <!-- <img src="./images/qikuterra/logotitle.png" width="402" height="138" alt=""/> -->
                     </div>
@@ -167,7 +167,7 @@
             <div class="container">
                 <div class="content">
                     <h3 class="h3"><img src="./images/qikuterra/img8-1.png" width="500" height="129" alt=""/></h3>
-                    <p class="desc">Strengthening functionality with end-to-end safety represents a milestone for QiKU's system-level approach. Embedded with active safety technology, the QiKU phone delivers perfect anti-fraud, anti-harassment, property protection, and privacy protection functions. Thanks to more than 2,500 experts involved in the safety engineering of the Qihoo 360, users can enjoy the convenience of high-tech features without any of the risks.
+                    <p class="desc">Strengthening functionality with end-to-end safety represents a milestone for QiKU's system-level approach. Thanks to more than 2,500 experts involved in the safety engineering of the Qihoo 360, users can enjoy the convenience of high-tech features without any of the risks.
 Smooth operation combined with full safety is a great triumph. In addition to the bottom-layer optimization of Android system, any app can be uninstalled from the QiKU phone, resulting in greater stability and smoother use without any lag or stutter.
 </p>
                     <p class="linka"><a class="linka" href="360os.html" target="_blank" target="_blank">Learn more about 360OS></a></p>
