--- a/qikuterra/camera.html
+++ b/qikuterra/camera.html
@@ -3,7 +3,7 @@
 <head>
  <meta charset="utf-8">
         <meta charset="utf-8">
-        <title>qiku terra</title>
+        <title>Qiku Q Terra</title>
         <meta name="keywords" content="qiku,terra,mall">
         <meta name="description" content="qiku mall">
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -27,7 +27,7 @@
 <div id="header" class="header">
 	<div class="container">
     	<div class="hd-title">
-        	<h2 class="name">QiKU Terra</h2>
+        	<h2 class="name">Qiku Q Terra</h2>
         </div>
         <div class="fl ml30">
         	<ul class="hd-nav ">
@@ -52,7 +52,7 @@
 <div class="section ca-function01 animate-init">
 	<div class="container">
         <div class="content">
-        	<h3 class="h3">Double 13MP Intelligent<br/>Dual Rear Cameras<br/>Reinvention for a better<br/> experience</h3>
+        	<h3 class="h3">13MP Intelligent<br/>Dual Rear Cameras<br/>Reinvention for a better<br/> experience</h3>
             <p class="desc">Image enhancement by increasing the size of the camera light sensor requires a larger camera module. This leads to a slightly protruding camera that reduces the attractiveness of the phone’s exterior. If the size of the light sensor is fixed and only the pixels are upgraded to improve image quality, the amount of light per unit area for each pixel will decrease. As a result, the camera cannot capture the best quality images and include every little detail. After nearly a year of R&D, QiKU has taken an innovative step forward to introduce the concept of Color + Mono black-and-white night vision + 13 MP double-camera smart design.
 </p>
         </div>
@@ -68,9 +68,9 @@
 <div class="section ca-function02 animate-init">
 	<div class="container">
         <div class="content">
-        	<h3 class="h3">Double 13MP Intelligent Dual Rear Cameras<br/>Bringing you new horizons </h3>
+        	<h3 class="h3">13MP Intelligent Dual Rear Cameras<br/>Bringing you new horizons </h3>
             <p class="desc">The QiKU phone uses the Sony IMX278 RGBW CMOS Image Sensor and Sony Mono black and white night vision sensor. 
-The first feature adds a white pixel to every pixel, improving the amount of light by 40% and removing 78% of noise from video captured in low-light environments. It is specifically designed to capture color images. 
+The first feature adds a white pixel to every pixel, improving the amount of light by 40% and removing 78% of noise from any image or video captured in low-light environments. It is specifically designed to capture color images. 
 The second feature is responsible for outlines and details, and supports four times more light than a common color sensor. 
 Coupled with deep refinement through double-camera real-time processing, these features present colorful and highly detailed photos.
 </p>
@@ -95,11 +95,11 @@ Coupled with deep refinement through double-camera real-time processing, these f
 <div class="section ca-function03 animate-init">
 	<div class="container">
         <div class="content">
-        	<h3 class="h3">6P camera lens, F1.8 aperture<br/>Super-high resolution, much more light </h3>
-            <p class="desc">QiKU phone is equipped with a 6P camera lens and F1.8 aperture. The 6P lens substantially increases camera resolution via enhanced uniform illumination. The image resolution of photos edges taken by QiKU phone is increased by 50%. With maximum aperture, F1.8 allows 20% more light than F2.0.</p>
+        	<h3 class="h3">6P camera lenses, F1.8 aperture<br/>Super-high resolution, much more light </h3>
+            <p class="desc">QiKU phone is equipped with a 6P camera lenses and F1.8 aperture. The 6P lenses substantially increases camera resolution via enhanced uniform illumination. The image resolution of photos edges taken by QiKU phone is increased by 50%. With maximum aperture, F1.8 allows 20% more light than F2.0.</p>
            
          
-            <p class="ca03-desc6">By QiKU Terra</p>
+            <p class="ca03-desc6">By Terra</p>
             <p class="ca03-desc7">By Another Flagship</p>
         </div>
     </div>
