--- a/qikuterra/design.html
+++ b/qikuterra/design.html
@@ -3,7 +3,7 @@
 <head>
  <meta charset="utf-8">
         <meta charset="utf-8">
-        <title>qiku terra</title>
+        <title>Qiku Q terra</title>
         <meta name="keywords" content="qiku,terra,mall">
         <meta name="description" content="qiku mall">
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -27,7 +27,7 @@
 <div id="header" class="header">
 	<div class="container">
     	<div class="hd-title">
-        	<h2 class="name">QiKU Terra</h2>
+        	<h2 class="name">Qiku Q Terra</h2>
         </div>
         <div class="fl ml30">
         	<ul class="hd-nav ">
@@ -38,7 +38,7 @@
                 <li><a href="../360os.html" target="_blank">360OS</a></li>
                 <li><a href="parameter.html">Parameters</a></li>
                 <li><a href="photo.html">Gallery</a></li>
-                <li class="rb ml300 mt10 ri1"><a href="/" target="_blank">Home</a></li>
+                <li class="rb ml300 mt10 ri1"><a href="/" >Home</a></li>
                 
                 <!-- <li class="rb ml5 mt10 ri3"><a href="http://www.qiku.com/zt/youth/default.html" target="_blank">Learn more about Qiku Luna</a></li> -->
             </ul>
@@ -51,7 +51,7 @@
 	<div class="container">
         <div class="content">
         	<h3 class="h3">2.5D glass<br/>Crystal clear, smooth and fine</h3>
-            <p class="desc">QiKU Terra will take you on an extraordinary visual and usage tour. The 2.5D glass screen outshines ordinary<br/> glass with its round edge and super transparency. Fall in love the minute you touch the sparkling screen.</p>
+            <p class="desc">Terra will take you on an extraordinary visual and usage tour. The 2.5D glass screen outshines ordinary<br/> glass with its round edge and super transparency. Fall in love the minute you touch the sparkling screen.</p>
         </div>
         <div class="img">
         	<div class="sj1-1"><img src="../images/qikuterra/sj1-1.png" width="360" height="601"  alt=""/></div>
@@ -65,7 +65,7 @@
         <div class="content">
         	<h3 class="h3">83% display ratio 1.4mm side bezel<br/>Bigger Is Always Better</h3>
             <p class="desc">Astounding screen-to-body ratio of 83 percent, 1.4 mm ultra-narrow bezel
-The freedom to be delighted. <br/>QiKU Terra boasts an astounding screen-to-body ratio of 83 percent, and a bezel width of just 1.4 mm. <br/>The exquisite design gives a perfect appearance of QiKU Terra, and bringing the optimum experience.
+The freedom to be delighted. <br/>Terra boasts an astounding screen-to-body ratio of 83 percent, and a bezel width of just 1.4 mm. <br/>The exquisite design gives a perfect appearance of Terra, and bringing the optimum experience.
 </p>
         </div>
         <div class="img">
@@ -79,7 +79,7 @@ The freedom to be delighted. <br/>QiKU Terra boasts an astounding screen-to-body
 	<div class="container">
         <div class="content">
         	<h3 class="h3">Full-Metal Unibody Design<br/>Reinforced beauty and texture</h3>
-            <p class="desc">The inherent high-quality texture of the metal is unmatched by plastic or glass. After 200 processes of <br/>intricate polishing, a piece of light but strong aluminum alloy used in aircraft emerges as the integrated <br/>case of the QiKU Terra. </p>
+            <p class="desc">The inherent high-quality texture of the metal is unmatched by plastic or glass. After 200 processes of <br/>intricate polishing, a piece of light but strong aluminum alloy used in aircraft emerges as the integrated <br/>case of the Terra. </p>
         </div>
         <div class="img">
         	<div class="sj3-1"><img src="../images/qikuterra/sj3-1.png" width="758" height="582" alt=""/></div>
@@ -111,8 +111,8 @@ The freedom to be delighted. <br/>QiKU Terra boasts an astounding screen-to-body
 <div class="section sj-function05 animate-init">
 	<div class="container">
         <div class="content">
-        	<h3 class="h3">Same Sand Blasting Craftsmanship as <br/>iPhone6s Plus</h3>
-            <p class="desc">Instead of a cold surface, QiKU Terra provides a texture that is <br/>as smooth as satin with the 3D sand blasting technique. It is <br/>comfortable to hold the phone in the hand thanks to the<br/> polished zirconia beads and microscopic sand<br/> blasting, which is comparable to <br/>the iPhone6 Plus.</p>
+        	<h3 class="h3">Same Sand Blasting Craftsmanship as <br/>iPhone 6s Plus</h3>
+            <p class="desc">Instead of a cold surface, Terra provides a texture that is <br/>as smooth as satin with the 3D sand blasting technique. It is <br/>comfortable to hold the phone in the hand thanks to the<br/> polished zirconia beads and microscopic sand<br/> blasting, which is comparable to <br/>the iPhone 6s Plus.</p>
         </div>
     </div>
 </div>
@@ -123,10 +123,10 @@ The freedom to be delighted. <br/>QiKU Terra boasts an astounding screen-to-body
         <div class="content">
         	<h3 class="h3">3D Spherical Drill<br/>A Work of Art on the Arc</h3>
             <p class="desc">The balance of aesthetic beauty and comfortable feel achieved by the arc design of<br/>QiKU phone requires high-grade manufacturing techniques. Uneven openings were <br/>solved by the planar cutting technique. Therefore, we have adopted the latest 3D <br/>spherical drill technique to polish the edges of openings with a CCD radar probe.<br/> The entire process requires a dust free environment, and takes three times longer<br/> than the ordinary technical process.</p>
-            <p class="sj06-desc1">Triple the time to manufacture</p><br/>
+            <p class="sj06-desc1">3X the time to manufacture</p><br/>
             <!-- <p class="sj06-desc2">3</p> -->
             <!-- <p class="sj06-desc3">倍</p>  -->
-            <p class="sj06-desc4">Twice the labor cost</p>
+            <p class="sj06-desc4">2X the labor cost</p>
             <!-- <p class="sj06-desc5">2</p> -->
             <!-- <p class="sj06-desc6">倍</p> -->
         </div>
@@ -138,7 +138,7 @@ The freedom to be delighted. <br/>QiKU Terra boasts an astounding screen-to-body
 	<div class="container">
         <div class="content">
         	<h3 class="h3">Seamlessly Cutting-edge Craftsmanship</h3>
-            <p class="desc">The QiKU Terra is functional as well as attractive. The quality of the zero RF interference aluminum alloy ensures good reception; the seamless connection to the backplane is obtained through a 90 degree cut with high precision and smoothness. In this case, the overflow of the signal is ensured without affecting the integrity of the metal case.</p>
+            <p class="desc">The Terra is functional as well as attractive. The quality of the zero RF interference aluminum alloy ensures good reception; the seamless connection to the backplane is obtained through a 90 degree cut with high precision and smoothness. In this case, the overflow of the signal is ensured without affecting the integrity of the metal case.</p>
         </div>
     </div>
 </div>
@@ -155,7 +155,7 @@ The freedom to be delighted. <br/>QiKU Terra boasts an astounding screen-to-body
             <img src="../images/qikuterra/video_1.jpg" width="580px" height="325px"/>
             您的浏览器不支持 video 标签。
             </video></div>
-             <p class=" desc sj8-desc1">Put the 6-inch screen into a <br/>5.5-inch iPhone6 Plus</p>
+             <p class=" desc sj8-desc1">Put the 6-inch screen into a <br/>5.5-inch  e 6s Plus</p>
               <p class=" desc sj8-desc2">Adaptive seamless card tray to be<br/> Perfect fit to eliminate all gaps</p>
         </div>
     </div>
