--- a/qikuterra/parameter.html
+++ b/qikuterra/parameter.html
@@ -2,7 +2,7 @@
 <html>
 <head>
  <meta charset="utf-8">
-        <title>qiku terra</title>
+        <title>Qiku Q terra</title>
         <meta name="keywords" content="qiku,terra,mall">
         <meta name="description" content="qiku mall">
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -27,7 +27,7 @@
 <div id="header" class="header">
 	<div class="container">
     	<div class="hd-title">
-        	<h2 class="name">QiKU Terra</h2>
+        	<h2 class="name">Qiku Q Terra</h2>
         </div>
         <div class="fl ml30">
         	<ul class="hd-nav ">
@@ -38,7 +38,7 @@
                 <li><a href="../360os.html" target="_blank">360OS</a></li>
                 <li><a href="parameter.html">Parameters</a></li>
                 <li><a href="photo.html">Gallery</a></li>
-                <li class="rb ml300 mt10 ri1"><a href="/" target="_blank">Home</a></li>
+                <li class="rb ml300 mt10 ri1"><a href="/">Home</a></li>
                 
                 <!-- <li class="rb ml5 mt10 ri3"><a href="http://www.qiku.com/zt/youth/default.html" target="_blank">Learn more about Qiku Luna</a></li> -->
             </ul>
@@ -54,7 +54,7 @@
     <div class="info-content clearfix  params">
         <div class="leftbox">
             <dl>
-                <dt>QiKU Terra</dt>
+                <dt>QiKU Q Terra</dt>
             </dl>
         </div>
         <div class="rightbox">
@@ -96,19 +96,19 @@
                 <dd>Sony IMX278 + Sony MONO（black & white）</dd>
                 <dd>13MP + 13MP</dd>
                 <dd>f/1.8 aperture</dd>
-                <dd>6P lens</dd>
+                <dd>6P lenses</dd>
                 <dd>Tone flash LEDs</dd>
                 <dd>Support natural automatic focus</dd>
                 <dd>FotoNation 4.0 beautify</dd>
                 <dd>Mode: SLR, night, video(4K), photo, beauty, pro, Square</dd>
-                <dd>Square LongExposure, WaterMark, GIF, AudioImage, Refocus</dd>
+                <dd>LongExposure, WaterMark, GIF, AudioImage, Refocus</dd>
                 <dd>Touch to take picture | Quick capture | Finger capture</dd>
                 <dd>Gesture capture</dd>
                 <dd>Face detect(face info save)</dd>
                 <dd>Record location when take picture</dd>
                 <dd>Timer picture (countdown)</dd>
                 <dd><b>Front Camera</b></dd>
-                <dd>800MP with 1.4μm pixels</dd>
+                <dd>8MP with 1.4μm pixels</dd>
                 <dd>Grid line</dd>
                 <dd>Face detect(face info save)</dd>
                 <dd>Front photo mirror</dd>
@@ -218,7 +218,7 @@
     </div>
 </div>
 
-<!-- Audio -->
+<!-- Audio 
 <div class="container">
     <div class="info-content clearfix params">
         <div class="leftbox">
@@ -234,14 +234,14 @@
             </dl>
         </div>
     </div>
-</div>
+</div>-->
 
 <!-- Video -->
 <div class="container">
     <div class="info-content clearfix params">
         <div class="leftbox">
             <dl>
-                <dt>Video</dt>
+                <dt>Video/Audio/Picture</dt>
             </dl>
         </div>
         <div class="rightbox">
