--- a/qikuterra/performance.html
+++ b/qikuterra/performance.html
@@ -2,7 +2,7 @@
 <html>
 <head>
  <meta charset="utf-8">
-        <title>qiku terra</title>
+        <title>Qiku Q Terra</title>
         <meta name="keywords" content="qiku,terra,mall">
         <meta name="description" content="qiku mall">
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -25,7 +25,7 @@
 <div id="header" class="header">
 	<div class="container">
     	<div class="hd-title">
-        	<h2 class="name">QiKU Terra</h2>
+        	<h2 class="name">Qiku Q Terra</h2>
         </div>
         <div class="fl ml30">
         	<ul class="hd-nav ">
@@ -36,7 +36,7 @@
                 <li><a href="../360os.html" target="_blank">360OS</a></li>
                 <li><a href="parameter.html">Parameters</a></li>
                 <li><a href="photo.html">Gallery</a></li>
-                <li class="rb ml300 mt10 ri1"><a href="/" target="_blank">home</a></li>
+                <li class="rb ml300 mt10 ri1"><a href="/">home</a></li>
                 
                 <!-- <li class="rb ml5 mt10 ri3"><a href="/zt/youth/default.html" target="_blank">Learn more about Qiku Luna</a></li> -->
             </ul>
@@ -49,8 +49,8 @@
 <div class="section xn-function01 animate-init">
 	<div class="container">
         <div class="content">
-        	<h3 class="h3">The Cores We Choose Are All for Performance<br/>Start from 64-bit Processor</h3>
-            <p class="desc">In order to meet users’ smooth daily multitasks, we chose killer matches for QiKU Terra and Terra prime. You don’t have to worry for multitasking games, movies and those memory-intensive apps any more. These processors also improve 30% performance and save 20% power consumption.</p>
+        	<h3 class="h3">The Cores We Choose Snapdragon 808 for Better Performance<br/>Start from 64-bit Processor</h3>
+            <p class="desc">In order to meet users’ smooth daily multitasks, we chose killer matches for Terra. You don’t have to worry for multitasking games, movies and those memory-intensive apps any more. These processors also improve 30% performance and save 20% power consumption.</p>
             <p class="xn1-p1">6-core processor</p>
             <p class="xn1-p2">64-bit Snapdragon 808 processor</p>
             <p class="xn1-p3">3GB</p>
@@ -72,7 +72,7 @@
 	<div class="container">
         <div class="content">
         	<h3 class="h3">Exclusive Space Cooling Process<br/>Better to Solve Android’s Heating Problem</h3>
-            <p class="desc">The space cooling mechanism applied in Terra and Terra prime is to cool the phone down when it runs intensely. The cooling process works the same way as satellites’ cooling process. Inside the phone structure, there is a tiny pipe inserted with flowing liquid, flowing to high temperature end going diffused, flowing to low temperature end going coagulated. With this circulation we ensure both ends temperature are well balanced and the handset doesn’t get that heat. Free play and play hard. </p>
+            <p class="desc">The space cooling mechanism applied in Terra is to cool the phone down when it runs intensely. The cooling process works the same way as satellites’ cooling process. Inside the phone structure, there is a tiny pipe inserted with flowing liquid, flowing to high temperature end going diffused, flowing to low temperature end going coagulated. With this circulation we ensure both ends temperature are well balanced and the handset doesn’t get that heat. Free play and play hard. </p>
         </div>
         <div class="img">
         	<div class="xn2"><img src="../images/qikuterra/xn2.png" width="810" height="757" alt="" /></div>
@@ -93,8 +93,8 @@
             <p class="xn3-p4">Super saturated colors</p>
             <p class="xn3-p5">368</p>
             <p class="xn3-p6">PPI</p>
-            <p class="xn3-p7">1400:1Contrast </p>
-            <p class="xn3-p8">Ratio</p>
+            <p class="xn3-p7">1400:1 </p>
+            <p class="xn3-p8" style="left:760px !important">Contrast Ratio</p>
         </div>
         <div class="img">
       
