--- a/qikuterra/photo.html
+++ b/qikuterra/photo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
  <meta charset="utf-8">
-        <title>qiku terra</title>
+        <title>Qiku Q Terra</title>
         <meta name="keywords" content="qiku,terra,mall">
         <meta name="description" content="qiku mall">
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -26,7 +26,7 @@
 <div id="header" class="header">
 	<div class="container">
     	<div class="hd-title">
-        	<h2 class="name">QiKU Terra</h2>
+        	<h2 class="name">Qiku Q Terra</h2>
         </div>
          <div class="fl ml30">
         	<ul class="hd-nav ">
@@ -37,7 +37,7 @@
                 <li><a href="../360os.html" target="_blank">360OS</a></li>
                 <li><a href="parameter.html">Parameters</a></li>
                 <li><a href="photo.html">Gallery</a></li>
-                <li class="rb ml300 mt10 ri1"><a href="/" target="_blank">Home</a></li>
+                <li class="rb ml300 mt10 ri1"><a href="/">Home</a></li>
                 
                 <!-- <li class="rb ml5 mt10 ri3"><a href="http://www.qiku.com/zt/youth/default.html" target="_blank">Learn more about Qiku Luna</a></li> -->
             </ul>
