--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="css/full-slider.css" rel="stylesheet">
 		<!-- Theme CSS -->
         <link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="css/mobile.css">
 
 		<!-- Skin CSS -->
@@ -33,7 +33,7 @@
 		<style type="text/css">
 		.carousel-indicators li{border:1px solid #f3f3f3; border-radius:50% !important;}
 		.carousel-indicators .active{background-color:#f3f3f3;}
-		.carousel-caption{text-shadow: 0 0px 0px rgba(0,0,0,1) !important;}
+		.carousel-caption{text-shadow: 0 0px 0px rgba(0,0,0,0) !important;}
 		</style>
 	</head>
 
@@ -63,7 +63,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a class="page-scroll" href="/in/qikuterra.html">Qiku Terra</a></li>
+                            <li><a class="page-scroll" href="qikuterra.html">Qiku Terra</a></li>
                             <li><a class="page-scroll" href="#about-section">All Products</a>
                             	<!--<ul>
                             		<li><a href="#">Q Terra</a></li>
@@ -108,13 +108,30 @@
         <!-- Wrapper for Slides -->
         <div class="carousel-inner">
             <div class="item active">
+                <!-- Set the second background image using inline CSS below. -->
+                <div class="fill main-slider-bakcground-alignment" style="background-image:url('img/SaleBanner.jpg');"></div>
+                <div class="carousel-caption right-10">
+                    <div class="col-md-6 col-sm-6 col-xs-12 pull-right text-left slider-3-text">
+                     <h1 class="heading">Terra</h1>
+                                <p style="font-size:22px" class="subheading">Born to be A Game Changer</p><br><br>
+                                <p style="font-size:22px" class="subheading">Open Sale: <i class="fa fa-rupee"></i>&nbsp;21,999</p><br>
+                                <p style="font-size:22px" class="subheading" style="color:#E8382F">With Q-Invite: <i class="fa fa-rupee"></i>&nbsp;19,999</p><br>
+                                 <div class="extra-space-l"></div>
+                                <a class="btn btn-blank f_27" target="_blank" href="https://gadgets360.com/shop/qiku-q-terra-silver-16-gb-3235322d333938" role="button" >Buy Now</a>
+<div class="extra-space-l "></div>
+
+                    </div>
+
+                </div>
+            </div>
+            <div class="item">
                 <!-- Set the first background image using inline CSS below. -->
                 <div class="fill"></div>
                 <div class="carousel-caption">
                    <h1 class="heading">Q Terra</h1>
 								<p class="subheading">The Ultimate Flagship</p>
 								 <div class="extra-space-l"></div>
-								<a class="btn btn-blank f_27" target="_blank" href="https://gadgets360.com/shop/qiku-q-terra-silver-16-gb-3235322d333938" role="button" >Learn more &gt;&gt;</a>
+								<a class="btn btn-blank f_27" href="qikuterra.html" role="button" >Learn more &gt;&gt;</a>
                                 <div class="extra-space-l bottom-70"></div>
 								<img src="img/Phone.png" class="img-responsive bottom-50" style="margin-left:auto; margin-right:auto;display:block;">
 							
@@ -124,36 +141,16 @@
                 <!-- Set the second background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('img/Image-2a.jpg');"></div>
                 <div class="carousel-caption right-10">
-                   <div class="col-md-6 col-sm-6 col-xs-12 pull-right">
+                   <div class="col-md-6 col-sm-6 col-xs-12 pull-right text-left">
                    	 <h1 class="heading-white">Q Terra</h1>
 								<p class="subheading-white">The Ultimate Flagship</p>
 								 <div class="extra-space-l"></div>
-								<a class="btn btn-blank f_27" target="_blank" href="https://gadgets360.com/shop/qiku-q-terra-silver-16-gb-3235322d333938" role="button" >Learn more &gt;&gt;</a>
+								<a class="btn btn-blank f_27" href="qikuterra.html" role="button" >Learn more &gt;&gt;</a>
 <div class="extra-space-l bottom-70"></div>
 
 					</div>
                 </div>
             </div>
-            <div class="item">
-                <!-- Set the second background image using inline CSS below. -->
-                <a target="_blank" href="https://gadgets360.com/shop/qiku-q-terra-silver-16-gb-3235322d333938">
-                <div class="fill" style="background-image:url('img/SaleBanner2.png');"></div>
-                <div class="carousel-caption right-10">
-                   <!--<div class="col-md-6 col-sm-6 col-xs-12 pull-right">
-                     <h1 class="heading-white">Terra</h1>
-                                <p class="subheading-white">Born To Be A Game Changer</p>
-                                <br />
-                                <p class="subheading-white">Open Sale : &#x20B9; 21,999</p>
-                                <p class="subheading-white">with Q-Invite : &#x20B9; 19,999</p>
-                                 <div class="extra-space-l"></div>
-                                <a class="btn btn-blank f_27" target="_blank" href="https://gadgets360.com/shop/qiku-q-terra-silver-16-gb-3235322d333938" role="button" >Learn more &gt;&gt;</a>
-<div class="extra-space-l bottom-70"></div>
-
-                    </div> -->
-                </div>
-                </a>
-            </div>
-
             </div>
 
         <!-- Controls -->
